[gd_scene load_steps=7 format=2]

[ext_resource path="res://scripts/player.gd" type="Script" id=1]
[ext_resource path="res://models/Hazard Unit/hazard_unit_free.tscn" type="PackedScene" id=2]
[ext_resource path="res://sounds/ogg/m-60 loop version.ogg" type="AudioStream" id=3]
[ext_resource path="res://objects/fire.tscn" type="PackedScene" id=4]

[sub_resource type="Animation" id=1]

resource_name = "can_shake"
length = 0.4
loop = true
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cam/Camera:translation")
tracks/0/interp = 0
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.1, 0.2, 0.3, 0.4 ),
"transitions": PoolRealArray( 1, 1, 1, 1, 1 ),
"update": 1,
"values": [ Vector3( -3.05313, 9.61469, -8.09633 ), Vector3( -3.15313, 9.61469, -8.09633 ), Vector3( -3.00313, 9.61469, -8.09633 ), Vector3( -3.15313, 9.61469, -8.09633 ), Vector3( -3.05313, 9.61469, -8.09633 ) ]
}

[sub_resource type="Animation" id=2]

length = 0.5
loop = false
step = 0.1
tracks/0/type = "value"
tracks/0/path = NodePath("cam:rotation_deg")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 180, 0 ), Vector3( 0, 0, 0 ) ]
}

[node name="player" type="Spatial" index="0"]

script = ExtResource( 1 )

[node name="Scene Root" parent="." index="0" instance=ExtResource( 2 )]

editor/display_folded = true

[node name="Skeleton" parent="Scene Root/Armature" index="0"]

bones/0/bound_children = [  ]
bones/1/bound_children = [  ]
bones/2/bound_children = [  ]
bones/3/bound_children = [  ]
bones/4/bound_children = [  ]
bones/5/bound_children = [  ]
bones/6/bound_children = [  ]
bones/7/bound_children = [  ]
bones/8/bound_children = [  ]
bones/9/bound_children = [  ]
bones/10/bound_children = [  ]
bones/11/bound_children = [  ]
bones/12/bound_children = [  ]
bones/13/bound_children = [  ]
bones/14/bound_children = [  ]
bones/15/bound_children = [  ]
bones/16/bound_children = [  ]
bones/17/bound_children = [  ]
bones/18/bound_children = [  ]
bones/19/bound_children = [  ]
bones/20/bound_children = [  ]
bones/21/bound_children = [  ]

[node name="AnimationPlayer" parent="Scene Root" index="1"]

playback_speed = 1.0

[node name="AnimationTreePlayer" type="AnimationTreePlayer" parent="." index="1"]

playback_process_mode = 1
master_player = NodePath("../Scene Root/AnimationPlayer")
base_path = NodePath("../Scene Root")
active = true
data = {
"active": true,
"connections": [ "wait_to_shoot", "out", 0, "anim", "idle_to_wait", 0, "anim 2", "idle_to_wait", 1, "idle_to_wait", "wait_to_shoot", 0, "anim 3", "wait_to_shoot", 1 ],
"master": NodePath("../Scene Root/AnimationPlayer"),
"nodes": [ {
"filter": [  ],
"from": "idle_act_00",
"id": "anim",
"position": Vector2( 0, 0 ),
"type": "animation"
}, {
"id": "out",
"position": Vector2( 0, 0 ),
"type": "output"
}, {
"blend": 0.0,
"filter": [  ],
"id": "idle_to_wait",
"position": Vector2( 0, 0 ),
"type": "blend2"
}, {
"blend": 0.0,
"filter": [  ],
"id": "wait_to_shoot",
"position": Vector2( 0, 0 ),
"type": "blend2"
}, {
"filter": [  ],
"from": "in_action_wait",
"id": "anim 2",
"position": Vector2( 0, 0 ),
"type": "animation"
}, {
"filter": [  ],
"from": "in_action",
"id": "anim 3",
"position": Vector2( 0, 0 ),
"type": "animation"
} ]
}

[node name="cam" type="Spatial" parent="." index="2"]

transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, 0, 0, 0 )
_sections_unfolded = [ "Transform" ]

[node name="Camera" type="Camera" parent="cam" index="0"]

transform = Transform( -1, 0, -3.25841e-07, 0, 1, 0, 3.25841e-07, 0, -1, -3.15313, 9.61469, -8.09633 )
keep_aspect = 1
cull_mask = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0
doppler_tracking = 0
projection = 0
current = false
fov = 65.0
size = 1.0
near = 0.1
far = 100.0
_sections_unfolded = [ "Transform" ]

[node name="cam_anim" type="AnimationPlayer" parent="." index="3"]

root_node = NodePath("..")
autoplay = "play_cam"
playback_process_mode = 1
playback_default_blend_time = 0.0
playback_speed = 1.0
anims/can_shake = SubResource( 1 )
anims/play_cam = SubResource( 2 )
blend_times = [  ]

[node name="snd_shoot" type="AudioStreamPlayer" parent="." index="4"]

stream = ExtResource( 3 )
volume_db = 0.0
autoplay = false
mix_target = 0
bus = "Master"

[node name="fire" parent="." index="5" instance=ExtResource( 4 )]

transform = Transform( -1.62921e-07, 0, 1, 0, 1, 0, -1, 0, -1.62921e-07, -1.14683, 7.4956, 5.52163 )
visible = false
_sections_unfolded = [ "Transform" ]

[node name="shoot_delay" type="Timer" parent="." index="6"]

process_mode = 1
wait_time = 0.15
one_shot = true
autostart = false


[editable path="Scene Root"]
